--- a/react/src/scss/App.scss
+++ b/react/src/scss/App.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'header';
 @import 'section';
+@import 'item-list';
 
 *, ::before, ::after {
 	box-sizing: border-box;
