--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto|");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 .app-header {
   position: relative;
   display: flex;
@@ -14,9 +16,21 @@
     left: 15px;
     background-color: transparent;
     display: flex;
-    border: 0; }
+    border: 0;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    color: #b39a5c; }
+    .app-header__back i {
+      vertical-align: bottom; }
+    .app-header__back:focus {
+      outline: 0; }
+    .app-header__back:hover {
+      cursor: pointer; }
   .app-header__center {
-    display: flex; }
+    display: flex;
+    font-size: 24px;
+    font-weight: bold; }
 
 .app-section {
   padding: 15px; }
@@ -57,8 +71,112 @@
       padding-top: 15px; }
     .app-item-list__item-price {
       flex: 1; }
+    .app-item-list__item-heart {
+      color: #b39a5c; }
+      .app-item-list__item-heart:hover {
+        cursor: pointer; }
     .app-item-list__item img {
       width: 100%; }
+  .app-item-list__button {
+    margin: 0 auto;
+    display: flex;
+    background-color: white;
+    border: 1px solid #bca873;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 10px 50px;
+    border-radius: 20px;
+    color: #b39a5c;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+    .app-item-list__button:focus {
+      outline: 0; }
+    .app-item-list__button:hover {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      cursor: pointer; }
+
+@media (min-width: 768px) {
+  .app-item-view {
+    display: flex; } }
+
+.app-item-view__box {
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 15px 20px; }
+
+.app-item-view__image {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .app-item-view__image-heart {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #b39a5c; }
+    .app-item-view__image-heart:hover {
+      cursor: pointer; }
+
+.app-item-view__content {
+  flex: 1; }
+  @media (min-width: 768px) {
+    .app-item-view__content {
+      padding-left: 15px; } }
+  .app-item-view__content-info {
+    padding: 0 20px;
+    padding-top: 15px; }
+    @media (max-width: 767.98px) {
+      .app-item-view__content-info {
+        margin-top: 15px; } }
+    .app-item-view__content-info h1 {
+      margin: 0;
+      padding-top: 15px;
+      font-size: 24px;
+      font-weight: normal; }
+    .app-item-view__content-info h2 {
+      margin: 0;
+      padding: 7.5px 0;
+      color: rgba(0, 0, 0, 0.51);
+      font-weight: normal; }
+  .app-item-view__content-description {
+    margin-top: 15px; }
+
+.app-item-view__measurements {
+  display: flex;
+  flex-flow: column; }
+  .app-item-view__measurements-title {
+    font-size: 16px;
+    letter-spacing: 1px; }
+
+.app-item-view__actions {
+  display: flex;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-top: 15px; }
+  .app-item-view__actions-button {
+    flex: 1;
+    display: flex;
+    background-color: white;
+    color: #b89b5d;
+    border: 0;
+    font-size: 14px;
+    padding: 15px;
+    justify-content: center;
+    text-transform: uppercase; }
+    @media (min-width: 768px) {
+      .app-item-view__actions-button:first-child {
+        border-right: 1px solid rgba(0, 0, 0, 0.1); } }
+    .app-item-view__actions-button:focus {
+      outline: 0;
+      font-weight: bold; }
+    .app-item-view__actions-button:hover {
+      cursor: pointer; }
+
+.app-item-view__creator {
+  color: rgba(0, 0, 0, 0.51); }
+  .app-item-view__creator span:first-child {
+    padding-right: 15px;
+    color: rgba(0, 0, 0, 0.81); }
 
 *, ::before, ::after {
   box-sizing: border-box; }
@@ -76,6 +194,6 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: black;
+  color: rgba(0, 0, 0, 0.87);
   text-align: left;
   background-color: #fbfbfb; }
