--- a/react/src/scss/App.scss
+++ b/react/src/scss/App.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto|');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import 'variables';
 @import 'header';
 @import 'section';
 @import 'item-list';
+@import 'item-view';
 
 *, ::before, ::after {
 	box-sizing: border-box;
@@ -18,10 +21,10 @@ html, body {
 	font-family: 'Roboto', sans-serif;
 }
 body {
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: rgba(0, 0, 0, 87);
-  text-align: left;
-  background-color: rgb(251, 251, 251);
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: rgba(0, 0, 0, .87);
+	text-align: left;
+	background-color: rgb(251, 251, 251);
 }
